--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   TODO
 1. By changing only the display property of the CSS make all 3 squares line up horizontally like in goal1 image.
 2. Change only the display property to make all 3 squares line up vertically like in goal2 image. 
--->
+--> sasasasasaasasas
 
 <head>
   <title>CSS Display Property Example</title>
