hyda krmel lmerge

--- a/habooo.html
+++ b/habooo.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    Hello ya aarsaaaaa kifak askjdgaisdgashdkahskdjhaksd
+    hey how are you merge yala
 </body>
 </html>
